style: :lipstick: Correct alignment of past-events on footer
Correcting the alignment of past-events footer section

--- a/website/static/2023/css/main.css
+++ b/website/static/2023/css/main.css
@@ -2545,3 +2545,9 @@ footer {
   padding: revert;
   list-style: decimal !important;
 }
+
+.past-events {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Alineación a la izquierda */
+}
